created manifest file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.main.banner-mode=off
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/spm_database
 spring.datasource.username=spa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
